VCA-029: minor visible fixes

--- a/src/app/components/player-interface/player-interface.component.scss
+++ b/src/app/components/player-interface/player-interface.component.scss
@@ -7,6 +7,10 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  gap: $gutter;
+}
+
+.player-resources {
   background-color: black;
   color: white;
 }
